--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #f2f2f2;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  align-items: center;
+}
+*
 .button-link a{
   text-align: center;
 }
