--- a/characters/characters.css
+++ b/characters/characters.css
@@ -1,74 +1,74 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: gradient(to right, #ffefba, #ffffff);
-    margin: 0;
-    padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: gradient(to right, #ffefba, #ffffff);
+  margin: 0;
+  padding: 20px;
 }
 
 #page-title {
-    text-align: center;
-    font-size: 36px;
-    margin-bottom: 20px;
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
 .search-controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 #name-input {
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
 }
 
 #number-of-results {
-    text-align: center;
-    font-size: 24px;
-    font-family: Mario256;
-    color: yellow;
-    font-style: italic;
-    text-shadow: black 2px 2px 2px;
-    letter-spacing: 3px;
-    margin: 0; 
+  text-align: center;
+  font-size: 24px;
+  font-family: Mario256;
+  color: yellow;
+  font-style: italic;
+  text-shadow: black 2px 2px 2px;
+  letter-spacing: 3px;
+  margin: 0;
 }
 
 .search-controls label {
-    font-size: 16px;
-    color: yellow;
-    text-shadow: black 1px 1px 2px;
-    white-space: nowrap; 
+  font-size: 16px;
+  color: yellow;
+  text-shadow: black 1px 1px 2px;
+  white-space: nowrap;
 }
 
 #pagesize {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: white;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: white;
 }
 
 #character-info {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #character.name {
-    font-size: 24px;
-    font-weight: bold;
-    color: pink;
+  font-size: 24px;
+  font-weight: bold;
+  color: pink;
 }
 
 #all-characters-container {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .character-card {
@@ -95,7 +95,7 @@ body {
   transform: scale(1.05) rotate(-5deg);
 }
 
-.character-card #name{
+.character-card #name {
   color: yellow;
   font-family: Simpsons;
   text-shadow: black 0.1em 0.1em 0.2em;
@@ -112,38 +112,38 @@ body {
 }
 
 #phrases {
-    font-style: italic;
+  font-style: italic;
 }
 
 #birthdate {
-    color: gray;
+  color: gray;
 }
 
 #loading {
-    width: 90px;
-    height: 90px;
-    border: 5px solid #FFF;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-    }
+  width: 90px;
+  height: 90px;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
 
-    @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-  } 
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 #loading-text {
-    margin-top: 20px;
-    font-size: 1.2em;
+  margin-top: 20px;
+  font-size: 1.2em;
 }
 
 .character-card #Deceased {
@@ -172,7 +172,8 @@ body {
   padding: 35px;
 }
 
-#prev-btn, #next-btn {
+#prev-btn,
+#next-btn {
   width: 20%;
   padding: 17px 40px;
   border-radius: 50px;
@@ -185,7 +186,8 @@ body {
   transition: all 0.5s ease;
 }
 
-#prev-btn:hover, #next-btn:hover {
+#prev-btn:hover,
+#next-btn:hover {
   background-color: yellow;
   box-shadow: yellow;
   transform: scale(1.1);
@@ -198,5 +200,5 @@ body {
   color: yellow;
   font-style: italic;
   text-shadow: black 2px 2px 2px;
- letter-spacing: 5px;
+  letter-spacing: 5px;
 }
