--- a/episodes/episodes.css
+++ b/episodes/episodes.css
@@ -1,55 +1,55 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: gradient(to right, #ffefba, #ffffff);
-    margin: 0;
-    padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: gradient(to right, #ffefba, #ffffff);
+  margin: 0;
+  padding: 20px;
 }
 
 #page-title {
-    text-align: center;
-    font-size: 36px;
-    margin-bottom: 20px;
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
 .search-controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 #episode-input {
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
 }
 
 #number-of-results {
-    text-align: center;
-    font-size: 24px; 
-    font-family: Mario256;
-    color: yellow;
-    font-style: italic;
-    text-shadow: black 2px 2px 2px;
-    letter-spacing: 3px;
-    margin: 0;
+  text-align: center;
+  font-size: 24px;
+  font-family: Mario256;
+  color: yellow;
+  font-style: italic;
+  text-shadow: black 2px 2px 2px;
+  letter-spacing: 3px;
+  margin: 0;
 }
 
 .search-controls label {
-    font-size: 16px;
-    color: yellow;
-    text-shadow: black 1px 1px 2px;
-    white-space: nowrap;
+  font-size: 16px;
+  color: yellow;
+  text-shadow: black 1px 1px 2px;
+  white-space: nowrap;
 }
 
 #all-episodes-container {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .episode-card {
@@ -67,22 +67,22 @@ body {
   align-items: center;
 }
 
-.episode-card #name{
+.episode-card #name {
   color: yellow;
   font-family: Mario286;
   text-shadow: black 2px 2px 2px;
   letter-spacing: 2px;
 }
 
-.episode-card #synopsis{
+.episode-card #synopsis {
   color: orange;
 }
 
-.episode-card #season{
+.episode-card #season {
   color: green;
 }
 
-.episode-card #number{
+.episode-card #number {
   color: red;
 }
 
@@ -105,7 +105,8 @@ body {
   padding: 35px;
 }
 
-#prev-btn, #next-btn {
+#prev-btn,
+#next-btn {
   width: 20%;
   padding: 17px 40px;
   border-radius: 50px;
@@ -118,7 +119,8 @@ body {
   transition: all 0.5s ease;
 }
 
-#prev-btn:hover, #next-btn:hover {
+#prev-btn:hover,
+#next-btn:hover {
   background-color: yellow;
   box-shadow: yellow;
   transform: scale(1.1);
@@ -131,5 +133,5 @@ body {
   color: yellow;
   font-style: italic;
   text-shadow: black 2px 2px 2px;
- letter-spacing: 5px;
+  letter-spacing: 5px;
 }
