--- a/locations/locations.css
+++ b/locations/locations.css
@@ -1,56 +1,55 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: gradient(to right, #ffefba, #ffffff);
-    margin: 0;
-    padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: gradient(to right, #ffefba, #ffffff);
+  margin: 0;
+  padding: 20px;
 }
 
 #page-title {
-    text-align: center;
-    font-size: 36px;
-    margin-bottom: 20px;
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
 .search-controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 #location-input {
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
 }
 
 #number-of-results {
-    text-align: center;
-    font-size: 24px; 
-    font-family: Mario256;
-    color: yellow;
-    font-style: italic;
-    text-shadow: black 2px 2px 2px;
-    letter-spacing: 3px;
-    margin: 0;
+  text-align: center;
+  font-size: 24px;
+  font-family: Mario256;
+  color: yellow;
+  font-style: italic;
+  text-shadow: black 2px 2px 2px;
+  letter-spacing: 3px;
+  margin: 0;
 }
 
 .search-controls label {
-    font-size: 16px;
-    color: yellow;
-    text-shadow: black 1px 1px 2px;
-    white-space: nowrap;
+  font-size: 16px;
+  color: yellow;
+  text-shadow: black 1px 1px 2px;
+  white-space: nowrap;
 }
 
-
 #all-locations-container {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .location-card {
@@ -68,18 +67,18 @@ body {
   align-items: center;
 }
 
-.location-card #name{
+.location-card #name {
   color: yellow;
   font-family: Mario286;
   text-shadow: black 2px 2px 2px;
   letter-spacing: 2px;
 }
 
-.location-card #town{
+.location-card #town {
   color: orange;
 }
 
-.location-card #use{
+.location-card #use {
   color: green;
 }
 
@@ -102,7 +101,8 @@ body {
   padding: 35px;
 }
 
-#prev-btn, #next-btn {
+#prev-btn,
+#next-btn {
   width: 20%;
   padding: 17px 40px;
   border-radius: 50px;
@@ -115,7 +115,8 @@ body {
   transition: all 0.5s ease;
 }
 
-#prev-btn:hover, #next-btn:hover {
+#prev-btn:hover,
+#next-btn:hover {
   background-color: yellow;
   box-shadow: yellow;
   transform: scale(1.1);
@@ -128,5 +129,5 @@ body {
   color: yellow;
   font-style: italic;
   text-shadow: black 2px 2px 2px;
- letter-spacing: 5px;
+  letter-spacing: 5px;
 }
