--- a/specific_character/specificcharacter.css
+++ b/specific_character/specificcharacter.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #ffefba, #ffffff);
-    margin: 0;
-    padding: 20px;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to right, #ffefba, #ffffff);
+  margin: 0;
+  padding: 20px;
 }
 
 #charactercontainer {
@@ -24,24 +24,24 @@ body {
   align-items: flex-start;
 }
 
-#name{
+#name {
   color: blue;
   margin-top: 10px;
   font-family: Simpsons;
 }
 
-#phrases{
+#phrases {
   color: orange;
   font-family: Mario286;
   font-style: italic;
 }
 
-#occupation{
+#occupation {
   color: green;
   font-family: Mario286;
 }
 
-#age{
+#age {
   color: red;
   font-family: Mario286;
 }
@@ -54,8 +54,8 @@ body {
 }
 
 #birthdate {
-    color: gray;
-    font-family: Mario286;
+  color: gray;
+  font-family: Mario286;
 }
 
 #pagination {
@@ -63,10 +63,11 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  gap: 150px
+  gap: 150px;
 }
 
-#prev-btn, #next-btn {
+#prev-btn,
+#next-btn {
   width: 20%;
   padding: 17px 40px;
   border-radius: 50px;
@@ -79,7 +80,8 @@ body {
   transition: all 0.5s ease;
 }
 
-#prev-btn:hover, #next-btn:hover {
+#prev-btn:hover,
+#next-btn:hover {
   background-color: yellow;
   transform: scale(1.1);
 }
