--- a/specific_location/specificlocation.css
+++ b/specific_location/specificlocation.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #ffefba, #ffffff);
-    margin: 0;
-    padding: 20px;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to right, #ffefba, #ffffff);
+  margin: 0;
+  padding: 20px;
 }
 
 #locationcontainer {
@@ -24,7 +24,7 @@ body {
   align-items: flex-start;
 }
 
-#name{
+#name {
   color: yellow;
   margin-top: 10px;
   font-family: Simpsons;
@@ -32,14 +32,14 @@ body {
   text-shadow: black 1px 1px 2px;
 }
 
-#town{
+#town {
   color: green;
   font-family: Mario286;
   font-size: 25px;
   text-shadow: black 1px 1px 2px;
 }
 
-#use{
+#use {
   color: red;
   font-family: Mario286;
   font-size: 25px;
@@ -58,10 +58,11 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  gap: 150px
+  gap: 150px;
 }
 
-#prev-btn, #next-btn {
+#prev-btn,
+#next-btn {
   width: 20%;
   padding: 17px 40px;
   border-radius: 50px;
@@ -74,7 +75,8 @@ body {
   transition: all 0.5s ease;
 }
 
-#prev-btn:hover, #next-btn:hover {
+#prev-btn:hover,
+#next-btn:hover {
   background-color: yellow;
   transform: scale(1.1);
 }
