--- a/characters/characters.css
+++ b/characters/characters.css
@@ -5,10 +5,39 @@ body {
   padding: 20px;
 }
 
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 20px;
+}
+
 #page-title {
   text-align: center;
   font-size: 36px;
-  margin-bottom: 20px;
+  margin: 0;
+}
+
+#previouspage {
+  position: absolute;
+  left: 20px;
+  width: 150px;
+  padding: 14px;
+  border-radius: 50px;
+  cursor: pointer;
+  background-color: white;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-size: 15px;
+  transition: all 0.5s ease;
+  border: none;
+}
+
+#previouspage:hover {
+  background-color: yellow;
+  transform: translateX(-5px);
 }
 
 .search-controls {
